Development of the activity

--- a/src/main/resources/templates/home/index.html
+++ b/src/main/resources/templates/home/index.html
@@ -27,8 +27,8 @@
     <div class="container my-4">
       <div class="text-center">Desarrollo Taller 1</div>
 
-      <a th:href="@{/form}" class="btn btn-primary">Creación de partidos</a>
-      <a th:href="@{/productList}" class="btn btn-primary">Lista de Partidos</a>
+      <a th:href="@{matches/form}" class="btn btn-primary">Creación de partidos</a>
+      <a th:href="@{matches}" class="btn btn-primary">Lista de Partidos</a>
     </div>
 
     <div th:replace="~{fragments/footer :: footer}"></div>
