--- a/src/main/resources/templates/matches/form.html
+++ b/src/main/resources/templates/matches/form.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title th:text="${title}">Formulario</title>
 
     <!-- Bootstrap CSS -->
 
@@ -29,12 +30,13 @@
         <div class="col-md-8">
           <div class="card">
             <div class="card-header">Creación de Partido</div>
+            <h1 th:text="${title}"></h1>
 
             <div class="card-body">
               <form
-                th:action="@{/products/save}"
+                th:action="@{/matches}"
                 method="post"
-                th:object="${productForm}"
+                th:object="${matchForm}"
               >
                 <div
                   th:if="${#fields.hasErrors('*')}"
@@ -49,24 +51,57 @@
                 </div>
 
                 <div class="mb-2">
-                  <label for="name" class="form-label">Product Name</label>
+                  <label for="date" class="form-label">Fecha</label>
 
                   <input
-                    type="text"
-                    id="name"
+                    type="date"
+                    id="date"
                     class="form-control"
-                    th:field="*{name}"
+                    th:field="*{date}"
                   />
                 </div>
 
                 <div class="mb-2">
-                  <label for="price" class="form-label">Price</label>
+                  <label for="time" class="form-label">Hora (hasta 24 horas)</label>
+
+                  <input
+                    type="number"
+                    id="time"
+                    class="form-control"
+                    th:field="*{time}"
+                  />
+                </div>
+
+                <div class="mb-2">
+                  <label for="place" class="form-label">Lugar</label>
 
                   <input
                     type="text"
-                    id="price"
+                    id="place"
                     class="form-control"
-                    th:field="*{price}"
+                    th:field="*{place}"
+                  />
+                </div>
+
+                <div class="mb-2">
+                  <label for="state" class="form-label">Estado del partido</label>
+
+                  <input
+                    type="text"
+                    id="state"
+                    class="form-control"
+                    th:field="*{state}"
+                  />
+                </div>
+
+                <div class="mb-2">
+                  <label for="result" class="form-label">Resultado</label>
+
+                  <input
+                    type="text"
+                    id="result"
+                    class="form-control"
+                    th:field="*{result}"
                   />
                 </div>
 
