--- a/src/main/resources/templates/home/index.html
+++ b/src/main/resources/templates/home/index.html
@@ -27,7 +27,9 @@
     <div class="container my-4">
       <div class="text-center">Desarrollo Taller 1</div>
 
-      <a th:href="@{matches/form}" class="btn btn-primary">Creación de partidos</a>
+      <a th:href="@{matches/form}" class="btn btn-primary"
+        >Creación de partidos</a
+      >
       <a th:href="@{matches}" class="btn btn-primary">Lista de Partidos</a>
     </div>
 
