--- a/src/main/resources/templates/matches/form.html
+++ b/src/main/resources/templates/matches/form.html
@@ -62,7 +62,9 @@
                 </div>
 
                 <div class="mb-2">
-                  <label for="time" class="form-label">Hora (hasta 24 horas)</label>
+                  <label for="time" class="form-label"
+                    >Hora (hasta 24 horas)</label
+                  >
 
                   <input
                     type="number"
@@ -84,7 +86,9 @@
                 </div>
 
                 <div class="mb-2">
-                  <label for="state" class="form-label">Estado del partido</label>
+                  <label for="state" class="form-label"
+                    >Estado del partido</label
+                  >
 
                   <input
                     type="text"
