--- a/src/main/resources/templates/matches/detail.html
+++ b/src/main/resources/templates/matches/detail.html
@@ -7,6 +7,7 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
       rel="stylesheet"
     />
+
   </head>
   <body>
     <div class="container my-4">
@@ -19,7 +20,9 @@
           <p><strong>Hora:</strong> <span th:text="${match.time}"></span></p>
           <p><strong>Lugar:</strong> <span th:text="${match.place}"></span></p>
           <p><strong>Estado:</strong> <span th:text="${match.state}"></span></p>
-          <p><strong>Resultado:</strong> <span th:text="${match.result}"></span></p>
+          <p>
+            <strong>Resultado:</strong> <span th:text="${match.result}"></span>
+          </p>
         </div>
         <div class="card-footer d-flex justify-content-between">
           <a href="/matches" class="btn btn-secondary">Volver a la lista</a>
